force-app/main/default/objects/Bus_Value_Configuration__mdt/Bus_Value_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Bus Value Configuration</label>
    <pluralLabel>Bus Value Configurations</pluralLabel>
</CustomObject>