force-app/main/default/objects/Bus_Value_Configuration__mdt/fields/AC_Bonus__c.field-meta.xml
<CustomField>
    <fullName>AC_Bonus__c</fullName>
    <inlineHelpText>Percent bonus in value if bus has AC</inlineHelpText>
    <label>AC Bonus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>