force-app/main/default/objects/Bus_Value_Configuration__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Is this configuration active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>