force-app/main/default/objects/Bus_Value_Configuration__mdt/fields/Historic_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Historic_Bonus__c</fullName>
    <inlineHelpText>Bonus to value if the bus is older than the Historic year (value is percent)</inlineHelpText>
    <label>Historic Bonus</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>