force-app/main/default/objects/Bus_Value_Configuration__mdt/fields/Milage_Floor__c.field-meta.xml
<CustomField>
    <fullName>Milage_Floor__c</fullName>
    <inlineHelpText>Bus value does not begin to be impacted by milage until it has surpassed this value</inlineHelpText>
    <label>Milage Floor</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>