force-app/main/default/objects/Bus_Value_Configuration__mdt/fields/Passenger_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Capacity__c</fullName>
    <inlineHelpText>Maximum number of passengers for this bus</inlineHelpText>
    <label>Passenger Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
                <default>true</default>
                <label>6</label>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>