force-app/main/default/objects/Bus_Value_Configuration__mdt/fields/Starting_Value__c.field-meta.xml
<CustomField>
    <fullName>Starting_Value__c</fullName>
    <inlineHelpText>Starting resale value</inlineHelpText>
    <label>Starting Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>