force-app/main/default/objects/Bus_Value_Configuration__mdt/fields/Value_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Value_Reduction__c</fullName>
    <inlineHelpText>How much should the value of the bus decrease for each mile beyond the milage floor</inlineHelpText>
    <label>Value Reduction</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>